; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_icif.c_section_get_str.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/inseng/extr_icif.c_section_get_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inf_section = type { i32 }
%struct.inf_value = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inf_section*, i8*, i8**, i8*)* @section_get_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @section_get_str(%struct.inf_section* %0, i8* %1, i8** %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.inf_section*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.inf_value*, align 8
  store %struct.inf_section* %0, %struct.inf_section** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8** %2, i8*** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = load %struct.inf_section*, %struct.inf_section** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call %struct.inf_value* @inf_get_value(%struct.inf_section* %11, i8* %12)
  store %struct.inf_value* %13, %struct.inf_value** %10, align 8
  %14 = load %struct.inf_value*, %struct.inf_value** %10, align 8
  %15 = icmp ne %struct.inf_value* %14, null
  br i1 %15, label %20, label %16

16:                                               ; preds = %4
  %17 = load i8**, i8*** %8, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @copy_string(i8** %17, i8* %18)
  store i32 %19, i32* %5, align 4
  br label %31

20:                                               ; preds = %4
  %21 = load %struct.inf_value*, %struct.inf_value** %10, align 8
  %22 = call i8* @inf_value_get_value(%struct.inf_value* %21)
  %23 = load i8**, i8*** %8, align 8
  store i8* %22, i8** %23, align 8
  %24 = load i8**, i8*** %8, align 8
  %25 = load i8*, i8** %24, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %29, label %27

27:                                               ; preds = %20
  %28 = load i32, i32* @FALSE, align 4
  store i32 %28, i32* %5, align 4
  br label %31

29:                                               ; preds = %20
  %30 = load i32, i32* @TRUE, align 4
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %29, %27, %16
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local %struct.inf_value* @inf_get_value(%struct.inf_section*, i8*) #1

declare dso_local i32 @copy_string(i8**, i8*) #1

declare dso_local i8* @inf_value_get_value(%struct.inf_value*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
